[project]
name = "project-dynamic-link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy>=2.0.37",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.7.0",
    "sqlmodel>=0.0.32",
]
